infrastructure-as-code/kubernetes/applications/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
